--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "ntb/silverstripe-rest-api-basicauth-app",
-  "description": "Authorize applications againt your REST api using BasicAuth",
+  "name": "andrelohmann-silverstripe/rest-api-basicauth-app",
+  "description": "Authorize users againt your REST api using BasicAuth",
   "type": "silverstripe-module",
-  "homepage": "https://github.com/notthatbad/silverstripe-rest-api-basicauth-app/releases",
+  "homepage": "https://github.com/andrelohmann/silverstripe-rest-api-basicauth/releases",
   "keywords": [
     "silverstripe",
     "rest",
