--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "composer/installers": "*",
     "ntb/silverstripe-rest-api": "^1.0.0"
   },
-  "license": "MIT License",
+  "license": "MIT",
   "authors": [
     {
       "name": "Andre Lohmann",
